Fix Summary values not visible with IE11

--- a/client/components/summary/style.scss
+++ b/client/components/summary/style.scss
@@ -98,7 +98,7 @@ $inner-border: $core-grey-light-500;
 	}
 
 	.woocommerce-summary__item-delta {
-		flex: 0;
+		flex: 0 1 auto;
 		display: flex;
 		flex-wrap: none;
 	}
